Fix z-index Datepicker/Modal && Select Error

--- a/src/components/Datepicker/Datepicker.css
+++ b/src/components/Datepicker/Datepicker.css
@@ -24,6 +24,7 @@
   position: absolute;
   top: calc(100% + 0.5rem);
   background-color: white;
+  z-index: 1;
 }
 
 .dayLabels,
