--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -7,6 +7,7 @@
   background-color: #fff;
   border-radius: 5px;
   padding: 20px;
+  z-index: 10;
 }
 
 .closeButton {
